# arbreth

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  NOTICE  README.md  SECURITY.md  clippy.toml  codecov.yml  deny.toml  docker-compose.yml  docker-compose.yml.bak  docker-entrypoint.sh  rustfmt.toml
crates/arb-bench/: Cargo.toml  README.md
crates/arb-bench/benches/: block_executor.rs  precompile_dispatch.rs  retryable_sweep.rs  state_root.rs  stylus_dispatch.rs  stylus_ink_metering.rs  tx_decode.rs
crates/arb-bench/src/: lib.rs
crates/arb-bench/tests/: end_to_end.rs
crates/arb-chainspec/: Cargo.toml
crates/arb-chainspec/src/: lib.rs
crates/arb-chainspec/tests/: spec.rs
crates/arb-e2e-tests/: Cargo.toml
crates/arb-e2e-tests/src/: helpers.rs  lib.rs
crates/arb-e2e-tests/tests/: arb_retry_tx.rs  arbitrum_tx_types.rs  block_to_block.rs  eip7702_e2e.rs  executor_construction.rs  legacy_variants.rs  multi_tx.rs  opcode_overrides.rs  opcode_strengthen.rs  signed_tx_e2e.rs  state_determinism.rs  stylus_dispatch.rs  typed_eth_txs.rs
crates/arb-evm/: Cargo.toml
crates/arb-evm/src/: assembler.rs  build.rs  config.rs  context.rs  evm.rs  executor.rs  hooks.rs  lib.rs  receipt.rs  state_overlay.rs  transaction.rs
crates/arb-evm/tests/: context_pure.rs  factory_construction.rs  hooks.rs
crates/arb-fuzz/: Cargo.toml  README.md  build-stylus-programs.sh
crates/arb-fuzz/fuzz_targets/: decode_arb_receipt.rs  decode_arb_tx_envelope.rs  decode_internal_tx.rs  diff_precompile.rs  diff_retryable.rs  diff_signed_tx.rs  diff_stylus_interop.rs  diff_stylus_wasm.rs  diff_tx.rs  parse_l2_transactions.rs  property_invariants.rs
crates/arb-fuzz/prebuilt/: counter.hex  erc20_mini.hex  sol_caller.hex  storage_stress.hex
crates/arb-fuzz/solidity-programs/: Reentrant.sol  StylusCallback.sol
crates/arb-fuzz/src/: corpus_helpers.rs  lib.rs  shared_nodes.rs
crates/arb-fuzz/tests/: arbwasm_read_methods.rs  factory_activate_inner_call.rs  factory_activate_runtime.hex  multi_block_manual_redeem_underpriced.rs  multi_msg_scenarios.rs  precompile_matrix.rs  precompile_matrix_data.rs  retryable_scenarios.rs  signed_tx_scenarios.rs  staged_upgrade.rs  stylus_7702_matrix.rs  stylus_calls_7702.rs  stylus_matrix.rs  stylus_real_programs.rs  stylus_solidity_interop.rs  underpriced_l1_retryable.rs  v60_slot_diff.rs
crates/arb-node/: Cargo.toml
crates/arb-node/examples/: dump_stylus_program.rs
crates/arb-node/src/: addons.rs  chainspec.rs  coalesced_state.rs  consensus.rs  engine.rs  genesis.rs  launcher.rs  lib.rs  payload.rs  producer.rs  validator.rs
crates/arb-node/tests/: args_and_consensus.rs  genesis_match.rs
crates/arb-payload/: Cargo.toml
crates/arb-payload/src/: lib.rs
crates/arb-payload/tests/: payload_id.rs
crates/arb-precompiles/: Cargo.toml
crates/arb-precompiles/src/: arbaddresstable.rs  arbaggregator.rs  arbbls.rs  arbdebug.rs  arbfilteredtxmanager.rs  arbfunctiontable.rs  arbgasinfo.rs  arbinfo.rs  arbnativetokenmanager.rs  arbosacts.rs  arbostest.rs  arbowner.rs  arbownerpublic.rs  arbretryabletx.rs  arbstatistics.rs  arbsys.rs  arbwasm.rs  arbwasmcache.rs  lib.rs  nodeinterface.rs  nodeinterface_debug.rs  storage_slot.rs
crates/arb-precompiles/tests/: arbaddresstable.rs  arbaggregator.rs  arbbls.rs  arbdebug.rs  arbfilteredtxmanager.rs  arbfunctiontable.rs  arbgasinfo.rs  arbinfo.rs  arbnativetokenmanager.rs  arbosacts.rs  arbowner.rs  arbownerpublic.rs  arbretryabletx.rs  arbstatistics.rs  arbsys.rs  arbwasm.rs  arbwasmcache.rs  constraints.rs  harness_smoke.rs  nodeinterface.rs  nodeinterface_conformance.rs  precompile_set.rs  slot_test.rs  spec_gating.rs
crates/arb-primitives/: Cargo.toml
crates/arb-primitives/src/: arbos_versions.rs  error.rs  lib.rs  multigas.rs  receipt.rs  signed_tx.rs  tx_types.rs
crates/arb-primitives/tests/: multigas_proptest.rs  receipt_golden.rs  receipt_proptest.rs
crates/arb-rpc/: Cargo.toml
crates/arb-rpc/src/: api.rs  arb_api.rs  arbdebug.rs  arbtimeboost.rs  arbtrace.rs  block_producer.rs  builder.rs  conditional_tx.rs  header.rs  lib.rs  nitro_execution.rs  nitro_execution_handler.rs  nodeinterface_rpc.rs  outbox_proof.rs  receipt.rs  response.rs  stylus_debug.rs  stylus_tracer.rs  transaction.rs  types.rs
crates/arb-rpc/tests/: conformance.rs  debug_trace_conformance.rs  nitro_execution.rs
crates/arb-spec-tests/: Cargo.toml
crates/arb-spec-tests/src/: case.rs  execution.rs  fixture.rs  lib.rs  mode.rs  runner.rs
crates/arb-spec-tests/tests/: sepolia_112694675.rs  sepolia_115184744.rs  sepolia_115187469.rs  sepolia_128015513.rs  sepolia_130021029.rs  sepolia_139306946.rs  sepolia_149889087.rs  sepolia_152429039.rs  sepolia_152472573_direct_activate_v40.rs  sepolia_169854826.rs  sepolia_179288677.rs  sepolia_179288678.rs  sepolia_185892958_failed_activate_v40.rs  sepolia_204060366_pre_recorded_revert.rs  sepolia_204060502_stylus_gas_drift.rs  sepolia_213061213_stylus_multicall_7702.rs  spec.rs
crates/arb-storage/: Cargo.toml
crates/arb-storage/src/: backed_types.rs  bytes_storage.rs  extra_types.rs  lib.rs  queue.rs  slot.rs  state_ops.rs  storage.rs  vector.rs
crates/arb-storage/tests/: nitro_slot_parity.rs  queue.rs  storage.rs  vector.rs
crates/arb-stylus/: Cargo.toml  build.rs  probestack_stub.c
crates/arb-stylus/src/: cache.rs  config.rs  env.rs  error.rs  evm_api.rs  evm_api_impl.rs  host.rs  ink.rs  lib.rs  meter.rs  middleware.rs  native.rs  pages.rs  pricing.rs  run.rs  trace.rs
crates/arb-stylus/tests/: codegen.rs  pages.rs  pricing.rs  wasm_execution.rs  wavm.rs
crates/arb-test-harness/: Cargo.toml
crates/arb-test-harness/src/: capture.rs  dual_exec.rs  error.rs  genesis.rs  lib.rs  mock_l1.rs  rpc.rs  scenario.rs  stylus.rs
crates/arb-test-harness/tests/: integration.rs
crates/arb-test-utils/: Cargo.toml
crates/arb-test-utils/src/: accounts.rs  db.rs  harness.rs  lib.rs
crates/arbos/: Cargo.toml  build.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse_l2_transactions.rs
(+498 files in other folders)
