[workspace]
members = [
    "crates/arb-primitives",
    "crates/arb-chainspec",
    "crates/arb-storage",
    "crates/arb-evm",
    "crates/arb-precompiles",
    "crates/arb-node",
    "crates/arb-payload",
    "crates/arb-rpc",
    "crates/arb-txpool",
    "crates/arb-e2e-tests",
    "crates/arb-spec-tests",
    "crates/arb-stylus",
    "crates/arb-test-utils",
    "crates/arb-bench",
    "crates/arbos",
    "bin/arb-reth",
    "bin/gen-genesis",
]
exclude = ["brotli", "fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
license = "BUSL-1.1"

[workspace.dependencies]
# Internal crates
arb-primitives = { path = "crates/arb-primitives" }
arb-chainspec = { path = "crates/arb-chainspec" }
arb-storage = { path = "crates/arb-storage" }
arb-evm = { path = "crates/arb-evm" }
arb-precompiles = { path = "crates/arb-precompiles" }
arb-node = { path = "crates/arb-node" }
arb-payload = { path = "crates/arb-payload" }
arb-rpc = { path = "crates/arb-rpc" }
arb-txpool = { path = "crates/arb-txpool" }

arb-stylus = { path = "crates/arb-stylus" }
arb-test-utils = { path = "crates/arb-test-utils" }
arb-bench = { path = "crates/arb-bench" }
arbos = { path = "crates/arbos" }

# Reth SDK (official)
reth = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-network = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-payload-builder-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-trie = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-engine-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-network-p2p = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-node-events = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-prune = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-stages-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }
reth-trie-sparse = { git = "https://github.com/paradigmxyz/reth.git", rev = "20cfb2d517" }

# Alloy
alloy-primitives = { version = "1.5", default-features = false, features = ["map-foldhash"] }
alloy-consensus = { version = "1.7", default-features = false }
alloy-eips = { version = "1.7", default-features = false }
alloy-evm = { version = "0.27", features = ["rpc"] }
alloy-rpc-types-eth = { version = "1.7" }
alloy-genesis = { version = "1.7" }
alloy-network = { version = "1.7" }
alloy-rlp = { version = "0.3", features = ["derive"] }
alloy-rpc-types = { version = "1.7" }
alloy-rpc-types-engine = { version = "2.0" }
alloy-rpc-types-trace = { version = "1.7" }
alloy-serde = { version = "1.7" }
alloy-sol-types = { version = "1.5" }
alloy-trie = { version = "0.9" }
alloy-hardforks = { version = "0.4" }

# Revm
revm = { version = "34.0", features = [
    "optional_balance_check",
    "optional_eip3541",
    "optional_eip3607",
    "optional_priority_fee_check",
    "optional_eip7623",
    "optional_no_base_fee",
] }
revm-database = { version = "10.0" }
revm-database-interface = { version = "9.0" }
revm-state = { version = "9.0" }
revm-primitives = { version = "22.1" }
revm-interpreter = { version = "32.0" }
revm-context = { version = "12.0" }
revm-bytecode = { version = "8.0" }

# Arb-alloy
arb-alloy-consensus = "0.1.2"
arb-alloy-predeploys = "0.1.2"
arb-alloy-util = "0.1.2"

# Common
crossbeam-channel = "0.5"
futures = "0.3"
c-kzg = "2.1.7"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
once_cell = "1.21"
rustc-hash = "2.1"
rayon = "1.11"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1.68"
eyre = "0.6"
derive_more = { version = "2", features = ["full"] }
auto_impl = "1"
bytes = "1"
parking_lot = "0.12"
lazy_static = "1"
num = "0.4"
hex = "0.4"
cc = "1"
sha2 = "0.11"
base64 = "0.22"
jsonrpsee = { version = "0.26.0", features = ["macros", "server"] }
jsonrpsee-types = "0.26.0"
jsonrpsee-http-client = "0.26.0"
dyn-clone = "1"
wasmer = { git = "https://github.com/OffchainLabs/wasmer.git", rev = "6b15433d83f951555c24f0c56dc05e4751b0cc76", default-features = false, features = ["sys", "cranelift"] }
schnellru = "0.2"

nitro-prover = { package = "prover", git = "https://github.com/OffchainLabs/nitro.git", rev = "d7fe12c77aaf06c279e79d0dac38d89e67c711a4", default-features = false }
nitro-arbutil = { package = "arbutil", git = "https://github.com/OffchainLabs/nitro.git", rev = "d7fe12c77aaf06c279e79d0dac38d89e67c711a4" }

# Transitive deps for Nitro crates
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
wasmparser = "0.121"
ruint2 = "1.9.0"

# Test deps
rstest = "0.26"
proptest = "1"

[workspace.lints.rust]
unused_must_use = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "allow"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

# Structural complexity — acceptable for this codebase
too_many_arguments = "allow"
type_complexity = "allow"
result_unit_err = "allow"
new_without_default = "allow"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.maxperf]
inherits = "release"
lto = "fat"
