[package]
name = "arb-fuzz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Fuzz targets for arbreth: tx/receipt decoding plus differential vs Nitro reference."

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbos = { workspace = true }
arb-primitives = { workspace = true }
arb-alloy-consensus = "0.1.2"
alloy-primitives = { workspace = true }
alloy-eips = "1.7"

[[bin]]
name = "parse_l2_transactions"
path = "fuzz_targets/parse_l2_transactions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_arb_receipt"
path = "fuzz_targets/decode_arb_receipt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_arb_tx_envelope"
path = "fuzz_targets/decode_arb_tx_envelope.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_internal_tx"
path = "fuzz_targets/decode_internal_tx.rs"
test = false
doc = false
bench = false

[lints]
workspace = true
