[package]
name = "arb-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arb-primitives = { workspace = true }
arb-chainspec = { workspace = true }
arb-evm = { workspace = true }
arb-payload = { workspace = true }
arb-rpc = { workspace = true }
arb-txpool = { workspace = true }
alloy-consensus = { workspace = true }
alloy-evm = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
reth-chainspec = { workspace = true }
reth-consensus = { workspace = true }
reth-engine-primitives = { workspace = true }
reth-evm = { workspace = true }
reth-execution-types = { workspace = true }
reth-network = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-provider = { workspace = true }
reth-rpc-eth-api = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-node-types = { workspace = true }
reth-payload-builder = { workspace = true }
reth-payload-builder-primitives = { workspace = true }
reth-payload-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-storage-api = { workspace = true }
reth-transaction-pool = { workspace = true }
eyre = { workspace = true }
clap = { workspace = true }
futures-util = "0.3"
tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
