[package]
name = "arb-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
arb-alloy-consensus = { workspace = true }
arb-primitives = { workspace = true }
arb-precompiles = { workspace = true }
arb-stylus = { workspace = true }
arbos = { workspace = true }
arb-evm = { workspace = true }
arb-payload = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-rpc-types-trace = { workspace = true }
alloy-network = { workspace = true }
alloy-serde = { workspace = true }
alloy-evm = { workspace = true }
reth-chainspec = { workspace = true }
reth-evm = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-provider = { workspace = true }
reth-rpc = { workspace = true }
reth-rpc-convert = { workspace = true }
reth-rpc-eth-api = { workspace = true }
reth-rpc-eth-types = { workspace = true }
reth-rpc-server-types = { workspace = true }
reth-tasks = { workspace = true }
reth-storage-api = { workspace = true }
reth-transaction-pool = { workspace = true }
jsonrpsee = { workspace = true }
jsonrpsee-http-client = { workspace = true }
jsonrpsee-types = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
revm = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
