[package]
name = "arb-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arb-primitives = { workspace = true }
alloy-primitives = { workspace = true, features = ["std"] }
reth-storage-api = { workspace = true }
reth-provider = { workspace = true }
reth-db-api = { workspace = true }
revm = { workspace = true }
revm-database = { workspace = true }
revm-state = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
arb-test-utils = { workspace = true }

[lints]
workspace = true
