[package]
name = "arb-stylus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal
arbos = { workspace = true }
arb-chainspec = { workspace = true }
arb-primitives = { workspace = true }

# Alloy
alloy-primitives = { workspace = true }

# Wasmer
wasmer = { workspace = true }
wasmer-compiler = { path = "../../vendor/wasmer/lib/compiler" }
wasmer-types = { path = "../../vendor/wasmer/lib/types" }
wasmparser = { workspace = true }

nitro-prover = { workspace = true }
nitro-arbutil = { workspace = true }
nitro-brotli = { package = "nitro-brotli", path = "../../vendor/nitro-crates/brotli" }

# Revm
revm = { workspace = true }

# Common
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
lazy_static = { workspace = true }
eyre = { workspace = true }

[dev-dependencies]
wat = "1"

[lints]
workspace = true
