[package]
name = "arb-stylus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal
arbos = { workspace = true }
arb-chainspec = { workspace = true }
arb-primitives = { workspace = true }

# Alloy
alloy-primitives = { workspace = true }

# Wasmer
wasmer = { workspace = true }
wasmer-compiler = { git = "https://github.com/OffchainLabs/wasmer.git", rev = "6b15433d83f951555c24f0c56dc05e4751b0cc76" }
wasmer-types = { git = "https://github.com/OffchainLabs/wasmer.git", rev = "6b15433d83f951555c24f0c56dc05e4751b0cc76" }
wasmparser = { workspace = true }

nitro-prover = { workspace = true }
nitro-arbutil = { workspace = true }
nitro-brotli = { package = "brotli", git = "https://github.com/OffchainLabs/nitro.git", rev = "d7fe12c77aaf06c279e79d0dac38d89e67c711a4", features = ["cc_brotli"] }

# Revm
revm = { workspace = true }

# Common
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
lazy_static = { workspace = true }
eyre = { workspace = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
wat = "1"
proptest = { workspace = true }

[lints]
workspace = true
